# dd-metric

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  test.yml
Docker/builder/: build-for-platform.sh
src/: args.rs  main.rs
