[workspace]
resolver = "2"
members = []

[package]
name = "dd-metric"
version = "0.3.0"
edition = "2021"
authors = ["Andrew Herrington <andrew@💻.kz>"]
description = "Submit metrics to datadog via the Datadog API"
repository = "https://github.com/andrewthetechie/dd-metric"
readme = "README.md"
license = "MIT"
keywords = ['datadog', 'metrics', 'cli']

[features]
default = []
tokio-console = ["console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = "~1.0"
clap = { version = "~4.0", features = ["derive"] }
console-subscriber = { version = "~0.1", optional = true }
# Remove these after not testing anymore
env_logger = "^0.10.0"
log = "^0.4.19"
# needs to be 0.18 because the dd exporter hasn't been updated to support .19
metrics = "^0.20"
metrics-datadog-exporter = "0.1.13"
tokio = { version = "~1.25", features = ["rt", "rt-multi-thread", "macros"] }


[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
panic = "abort"
lto = true
codegen-units = 1
